--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,4 @@
-data/FashionMNIST/raw/t10k-images-idx3-ubyte
-pytorch03_computer_vision.py
-data/FashionMNIST/raw/t10k-images-idx3-ubyte.gz
-data/FashionMNIST/raw/t10k-labels-idx1-ubyte
-data/FashionMNIST/raw/t10k-labels-idx1-ubyte.gz
-data/FashionMNIST/raw/train-images-idx3-ubyte
-data/FashionMNIST/raw/train-images-idx3-ubyte.gz
-data/FashionMNIST/raw/train-labels-idx1-ubyte
-data/FashionMNIST/raw/train-labels-idx1-ubyte.gz
-__pycache__/helper_functions.cpython-311.pyc
-01_pytorch_workflow_model_0.pth
+data/
+__pycache__/
+*.pyc
+*.pth
