--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 torch>=1.10.0
 torchvision>=0.11.0
 torchaudio==2.3.0
+scikit-learn==1.4.2
+scikit-image==0.22.0
 matplotlib==3.8.4
 scikit-learn==1.4.2
 pandas==2.2.1
